syntax = "proto3";

package lagusion;

message Verse {
  repeated string contents = 1;
}

enum SongBook {
  ALL = 0;
  LAGU_SION = 1;
  LAGU_SION_EDISI_LENGKAP = 2;
}

enum SortOptions {
  NUMBER = 0;
  ALPHABET = 1;
}

message Song {
  uint32 id = 1;
  int32 number = 2;
  string title = 3;
  repeated Verse verses = 4;
  Verse reff = 5;
  SongBook song_book = 6;
}

message ListSongRequest {
  SongBook song_book = 1;
  SortOptions sort_options = 2;
}

message ListSongResponse {
  repeated Song songs = 1;
}

service LaguSionService {
  rpc ListSongs(ListSongRequest) returns (ListSongResponse) {}
}
